--- a/test/web/example.html
+++ b/test/web/example.html
@@ -2,7 +2,7 @@
 	<head>
 		<title></title>
 		<script src="live.js"></script>
-		<script src="../src/resistance.js"></script>
+		<script src="../../dist/resistance.js"></script>
 		<script>
 		</script>
 	</head>
